--- a/css/documentations.css
+++ b/css/documentations.css
@@ -14,6 +14,8 @@
 body {
     color: var(--main-color);;
     font-family: 'consolas';
+    font-weight: 300;
+
     background-image: url("../resources/images/background/documentation-background.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,6 +25,11 @@ body {
     min-height:100vh;
     align-items: center;
 }
+
+
+
+
+
 /* 
 ## Content ## 
 */
@@ -138,20 +145,145 @@ body {
     text-align: center;
     align-items: center;
 }
+
+
+
+
+
+/*
+## Sources ##
+*/
+button
+{
+    font-family: consolas;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    position: relative;
+    display: inline-block;
+    padding: 10px 30px;
+    margin-top: -3rem;
+    margin-bottom: 2rem;
+    background: #fff;
+    color: #000;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: 500;
+    box-shadow: rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+}
+
+button:hover
+{
+    background: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+}
+a {
+    text-decoration: none;
+    color: var(--secondary-color)
+}
+.popup {
+    margin: 10%;
+    position: fixed;
+    z-index: 5;
+    width: 25%;
+
+    overflow: auto;
+    transition: 0.3s ease-in-out;
+    opacity: 0;
+    transform: scale(0);
+
+    padding: 20px;
+    border: 1px solid #888;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+.popup.in {
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+}
+.popup.out {
+    opacity: 0;
+    pointer-events: auto;
+    transform: scale(0);
+}
+.popup-bg {
+    opacity: 0;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 4;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    transition: 0.3s ease-in-out;
+}
+.popup-bg.in {
+    opacity: 1;
+    visibility: visible;
+}
+.popup-bg.out {
+    opacity: 0;
+    visibility: hidden;
+}
+.popup-content {
+    margin: 15% auto;
+    
+}
+.popup-content p {
+    margin: 5px;
+}
+.popup-header {
+    font-size: 1.5rem;
+}
+.popup-divider {
+    border-top: 1px solid #bbb;
+    margin-left: -20px;
+    width: 110%;
+    margin-top: 1rem;
+}
+.close {
+    color: var(--main-color);
+    float: right;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: -22px;
+    transition: var(--navbar-transition-speed);
+}
+.close:hover{
+    opacity: 0.5;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* 
 ## Header and footer ##
  */
  .header {
-    position: relative;
-    padding: 20px 0px;
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+	width:100%;
+    top: 0;
+
+    padding: 20px 0;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+	font-weight: bold;
+    font-size: 1.5em;
+
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
-	font-size: 1.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
-    flex-basis: 100%;
-    top: 0;
-	width:100%;
  }
 .footer {
     position: relative;
@@ -166,6 +298,14 @@ body {
     bottom: 0;
 	width:100%;
 }
+.header-title {
+    margin: 0 7px;
+}
+
+
+
+
+
 /*
 ## NavBar ##
 */
@@ -255,6 +395,11 @@ body {
 .navbar:hover .navbar-title {
     transform: translateX(250px);
 }
+
+
+
+
+
 /*
 ## Transition ##
 */
