--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -3,7 +3,7 @@
 }
 :root {
     --main-color: rgb(214, 214, 214);
-    --secondary-color: rgb(178, 134, 196);
+    --secondary-color: rgb(148, 164, 255);
     --navbar-transition-speed: 0.5s;
     --background-color: rgba(0, 0, 0, 0.1);
 }
@@ -25,7 +25,10 @@ body {
     justify-content: center;
     align-items: center;
 }
-
+a {
+    text-decoration: none;
+    color: var(--secondary-color);
+}
 /* 
 ## Container ## 
 */
@@ -108,17 +111,25 @@ body {
 /* 
 ## Header and footer ##
  */
- .header {
+ .header {    
     position: fixed;
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+	width:100%;
+    top: 0;
+
     padding: 20px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+	font-weight: bold;
+    font-size: 1.5em;
+
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
-	font-size: 1.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
-    flex-basis: 100%;
-    top: 0;
-	width:100%;
+    
 }
 .footer {
     position: fixed;
@@ -132,6 +143,9 @@ body {
     flex-basis: 100%;
     bottom: 0;
 	width:100%;
+}
+.header-title {
+    margin: 0 7px;
 }
 /*
 ## NavBar ##
@@ -227,29 +241,15 @@ body {
 ## Popup ##
 */
 .popup {
-    transform: translateY(-100%);
     position: fixed;
     z-index: 5;
-
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    transition: 0.5s;
-  }
-.popup.in {
-    transition: 0.5s;
-    transform: translateY(0);
-}
-.popup.out {
-    transition: 0.5s;
-    transform: translateY(-100%);
-}
-.popup-content {
-    background-color: #fefefe;
     width: 25%;
-    margin: 15% auto;
+
+    overflow: auto;
+    transition: 0.3s ease-in-out;
+    opacity: 0;
+    transform: scale(0);
+
     padding: 20px;
     border: 1px solid #888;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
@@ -262,14 +262,57 @@ body {
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
 }
+.popup.in {
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+}
+.popup.out {
+    opacity: 0;
+    pointer-events: auto;
+    transform: scale(0);
+}
+.popup-bg {
+    opacity: 0;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 4;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    transition: 0.3s ease-in-out;
+}
+.popup-bg.in {
+    opacity: 1;
+    visibility: visible;
+}
+.popup-bg.out {
+    opacity: 0;
+    visibility: hidden;
+}
+.popup-content {
+    margin: 15% auto;
+    
+}
 .popup-content p {
     margin: 5px;
+}
+.popup-header {
+    font-size: 1.5rem;
+}
+.popup-divider {
+    border-top: 1px solid #bbb;
+    margin-left: -20px;
+    width: 110%;
+    margin-top: 1rem;
 }
 .close {
     color: var(--main-color);
     float: right;
-    font-size: 28px;
+    font-size: 1.5rem;
     font-weight: bold;
+    margin-top: -22px;
     transition: var(--navbar-transition-speed);
 }
 .close:hover{
@@ -277,6 +320,10 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
+
+
+
+
 /*
 ## Transition ##
 */
