--- a/css/style_doc.css
+++ b/css/style_doc.css
@@ -266,14 +266,22 @@ COLOR BACKGROUND
 ## Header and footer ##
  */
  .header {
-    padding: 20px;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-	font-size: 1.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: row;
     flex-basis: 100%;
 	width:100%;
+    top: 0;
+
+    padding: 20px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+	font-weight: bold;
+    font-size: 1.5em;
+
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
 }
 .footer {
     padding: 20px;
@@ -284,6 +292,9 @@ COLOR BACKGROUND
     box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
     flex-basis: 100%;
 	width:100%;
+}
+.header-title {
+    margin: 0 7px;
 }
 /*
 ## NavBar ##
