--- a/css/documentations.css
+++ b/css/documentations.css
@@ -494,9 +494,14 @@ a {
     }
     .title {
         font-size: 3rem;
+        padding: 4rem;
+    }
+    .box {
+        padding: 1rem;
     }
     .subtitle {
         font-size: 2.5rem;
+        padding: 3rem;
     }
     .text {
         font-size: 2rem;
